Refactor engine architecture, improve observability, and add test suite
- Replaced custom Factory interface with standard java.util.function.Supplier
- Introduced CompiledRule for compiling MVEL expressions at initialization, greatly improving performance
- Added RuleListener and LoggingRuleListener for improved observability
- Introduced RulesEngineBuilder to simplify engine construction
- Added a comprehensive automated test suite and code quality checks
- Addressed syntax errors in StatefulRulesEngine and StatelessRulesEngine